[File-Management Service intial commmit]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ management.health.readinessState.enabled=true
 
 # Base path for actuator endpoints (optional)
 management.endpoints.web.base-path=/actuator
+
+
+file.directory.path=src/main/resources/FileDirectory
