--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ management.endpoints.web.base-path=/actuator
 
 
 file.directory.path=src/main/resources/FileDirectory
+
+# Maximum file size (default is 1MB)
+spring.servlet.multipart.max-file-size=500MB
+
+# Maximum request size (default is 10MB)
+spring.servlet.multipart.max-request-size=600MB
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+
