[Added functionality to save file details in DB + Storing/Retrieving image files ]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,19 @@ spring.servlet.multipart.max-request-size=600MB
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb+srv://home:{}@home01.izpqyrc.mongodb.net/?retryWrites=true&w=majority&appName=home01
+spring.data.mongodb.database=homedb
+# MongoDB Authentication (uncomment if authentication is required)
+#spring.data.mongodb.username=your_username
+#spring.data.mongodb.password=your_password
+#spring.data.mongodb.authentication-database=admin
+
+# MongoDB Connection Pool Settings (optional)
+spring.data.mongodb.options.max-connection-pool-size=20
+spring.data.mongodb.options.min-connection-pool-size=5
+spring.data.mongodb.options.max-connection-idle-time=30000
+spring.data.mongodb.options.connection-timeout=5000
+
+
+
