Improve file upload and media streaming support
Enhanced file upload logic with validation, directory creation, and streaming for large files. Improved download response to support media streaming with appropriate headers. Increased max file and request size limits in application properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ management.endpoints.web.base-path=/actuator
 file.directory.path=src/main/resources/FileDirectory
 
 # Maximum file size (default is 1MB)
-spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-file-size=20GB
 
 # Maximum request size (default is 10MB)
-spring.servlet.multipart.max-request-size=600MB
+spring.servlet.multipart.max-request-size=10GB
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
